--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 	<head>
 
 		<meta charset="utf-8">
-		<title>Thing Xin Jie</title>
+		<title>Thing Xin Jie | Jaycie</title>
+		<meta name="description" content="Thing Xin Jie, a recent graduate with a degree in Computer Science.">
+		<meta name="author" content="Thing Xin Jie">
+		<link rel="icon" 
+			type="image/png" 
+			sizes="32x32"
+			href="./img/favicon.png">
 		<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 		<meta name="viewport" content="width=1024">
 
@@ -721,9 +727,9 @@
 								<div>
 									<p>
 										<ul>
-											<li>I just graduated from Monash University Malaysia with Bachelor of Computer Science</li>
+											<li>Recent graduate with Bachelor of Computer Science from Monash University Malaysia</li>
 											<li>I took Data Science minor during my study but I'm very interested in application/ software development</li>
-											<li>I am an ISFP personality type person; can leave everything else in the dust when caught up in something exciting! &#129299 </li>
+											<li>An ISFP personality type individual; can leave everything else in the dust when caught up in something exciting! &#129299 </li>
 										</ul>
 									</p>
 								</div>
@@ -933,6 +939,11 @@
 					</a>
 				</li>
 				<li class="nav-item">
+					<a class="nav-link text-white-50" target="_blank" href="mailto: thingxinjie@gmail.com">
+						<i class="fas fa-envelope"></i>
+					</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link text-white-50" target="_blank" href="https://api.whatsapp.com/send?phone=60146141615&text=From%20thingxinjie.com">
 						<i class="fab fa-whatsapp"></i>
 					</a>
@@ -943,18 +954,8 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link text-white-50" target="_blank" href="https://www.twitter.com/thingxinjie">
-						<i class="fab fa-twitter"></i>
-					</a>
-				</li>
-				<li class="nav-item">
 					<a class="nav-link text-white-50" target="_blank" href="https://github.com/xinjiething">
 						<i class="fab fa-github"></i>
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link text-white-50" target="_blank" href="mailto: thingxinjie@gmail.com">
-						<i class="fas fa-envelope"></i>
 					</a>
 				</li>
 			</ul>
