--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 		<link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
 		<link href='https://fonts.googleapis.com/css?family=Dosis:400,600' rel='stylesheet' type='text/css'>
 
-		<script src="main2.js"></script>
-		<script src="main.js"></script>
-		<script src="fullpage.js"></script>		
-		<link href='main.css' rel="stylesheet">
+		<script src="./javascript/main2.js"></script>
+		<script src="./javascript/main.js"></script>
+		<script src="./javascript/fullpage.js"></script>		
+		<link href='./css/main.css' rel="stylesheet">
 	
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
@@ -963,7 +963,7 @@
 		</nav>
 
 		<!-- Script -->
-		<script src='accordion.js'></script>
+		<script src='./javascript/accordion.js'></script>
 		
 	</body>
 </html>
